package switchfive.project.domain.shared.dddTypes;

public interface AggregateRoot<T> extends Entity<T> {
}
